blue box sizing on safari fix

--- a/docs/css/now-ui-kit.css
+++ b/docs/css/now-ui-kit.css
@@ -5491,7 +5491,6 @@ Created using IcoMoon - icomoon.io
 }
 
 .homepage-banner-logos {
-  display: flex;
   flex-basis: 33%;
   padding: 0;
 }
