--- a/docs/sass/now-ui-kit/_sections.scss
+++ b/docs/sass/now-ui-kit/_sections.scss
@@ -455,7 +455,6 @@
 }
 
 .homepage-banner-logos {
-    display: flex;
     flex-basis: 33%;
     padding: 0;
 }
